// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders correctly Error 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#FBF2F0",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 24,
          "padding": 4,
          "width": 24,
        }
      }
    >
      <svg
        fill="none"
        height={16}
        width={16}
      >
        <path
          d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
          fill="#C93717"
        />
      </svg>
    </View>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      Title
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      />
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#C93717",
            },
          ]
        }
      >
        Action 1
      </Text>
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#C93717",
            },
          ]
        }
      >
        Action 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Notification renders correctly Warning 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#FFF9EA",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 24,
          "padding": 4,
          "width": 24,
        }
      }
    >
      <svg
        fill="none"
        height={16}
        width={16}
      >
        <path
          d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
          fill="#9C6E00"
        />
      </svg>
    </View>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      Title
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      />
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#9C6E00",
            },
          ]
        }
      >
        Action 1
      </Text>
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#9C6E00",
            },
          ]
        }
      >
        Action 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Notification renders correctly with description 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#E8F8FF",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          width={16}
        >
          <path
            d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
            fill="#0768AE"
          />
        </svg>
      </View>
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Notification renders correctly with description and actions 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#E8F8FF",
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      >
        <svg
          fill="none"
          height={16}
          width={16}
        >
          <path
            d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
            fill="#0768AE"
          />
        </svg>
      </View>
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#0768AE",
            },
          ]
        }
      >
        Action 1
      </Text>
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#0768AE",
            },
          ]
        }
      >
        Action 2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Notification renders correctly with headline and description 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#E8F8FF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 24,
          "padding": 4,
          "width": 24,
        }
      }
    >
      <svg
        fill="none"
        height={16}
        width={16}
      >
        <path
          d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
          fill="#0768AE"
        />
      </svg>
    </View>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      Title
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      />
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Notification renders correctly with headline, description and actions 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "gap": 4,
        "paddingBottom": 12,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      {
        "backgroundColor": "#E8F8FF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 24,
          "padding": 4,
          "width": 24,
        }
      }
    >
      <svg
        fill="none"
        height={16}
        width={16}
      >
        <path
          d="M7.2 10.4h1.6V12H7.2v-1.6Zm0-6.4h1.6v4.8H7.2V4Zm.792-4C3.576 0 0 3.584 0 8s3.576 8 7.992 8C12.416 16 16 12.416 16 8s-3.584-8-8.008-8ZM8 14.4A6.398 6.398 0 0 1 1.6 8c0-3.536 2.864-6.4 6.4-6.4 3.536 0 6.4 2.864 6.4 6.4 0 3.536-2.864 6.4-6.4 6.4Z"
          fill="#0768AE"
        />
      </svg>
    </View>
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      Title
    </Text>
  </View>
  <View
    style={
      {
        "gap": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "alignItems": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          {
            "height": 24,
            "padding": 4,
            "width": 24,
          }
        }
      />
      <Text
        style={
          {
            "color": "#2E3338",
            "flexShrink": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "letterSpacing": 0.12,
            "lineHeight": 18,
          }
        }
      >
        Description
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          },
          {
            "justifyContent": "flex-end",
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#0768AE",
            },
          ]
        }
      >
        Action 1
      </Text>
      <Text
        onPress={[MockFunction]}
        style={
          [
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 14,
              "lineHeight": 18,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "color": "#0768AE",
            },
          ]
        }
      >
        Action 2
      </Text>
    </View>
  </View>
</View>
`;
